--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Build outputs
+.next/
+out/
+dist/
 
-# testing
-/coverage
+# Production
+.next/
+out/
 
-# next.js
-/.next/
-/out/
+# VSCode settings (ignore all except specific files)
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
 
-# production
-/build
-
-# misc
+# macOS system files
 .DS_Store
-*.pem
 
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
-.vercel
+# Optional cache files
+.cache/
+.next/cache/
 
-# typescript
+# Typescript
 *.tsbuildinfo
-next-env.d.ts
